@@ -43,7 +43,7 @@ const char* BEEBEEP_UPDATER_WEBSITE = "/update/beeupdater.txt";
 const char* BEEBEEP_VERSION = "3.0.4";
 const int BEEBEEP_PROTO_VERSION = 64;
 const int BEEBEEP_SETTINGS_VERSION = 5;
-const int BEEBEEP_BUILD = 636;
+const int BEEBEEP_BUILD = 637;
 
 #endif // BEEBEEP_VERSION_H
 
